@@ -83,7 +83,7 @@ GMT_LONG GMT_read_image_info (struct GMT_CTRL *C, char *file, struct GMT_IMAGE *
 #ifdef _PSLIB_H
 /* gmt_plot.c prototypes only included if pslib has been included */
 
-EXTERN_MSC char *GMT_export2proj4 (struct GMT_CTRL *C, char *pStrOut);
+EXTERN_MSC char * GMT_export2proj4 (struct GMT_CTRL *C);
 EXTERN_MSC void GMT_textpath_init (struct GMT_CTRL *C, struct GMT_PEN *LP, double Brgb[], struct GMT_PEN *BP, double Frgb[]);
 EXTERN_MSC void GMT_draw_map_rose (struct GMT_CTRL *C, struct GMT_MAP_ROSE *mr);
 EXTERN_MSC void GMT_draw_map_scale (struct GMT_CTRL *C, struct GMT_MAP_SCALE *ms);
