@@ -2,6 +2,9 @@
 	$Id$
 -----------------------------------------------------------------------------------------
 
+2011-09-23	fwobbe
+	* pslib.c, gmt_plot.c, grdimage.c:	Fixed a memory leak in GMT_export2proj4
+
 2011-09-23	jluis
 	* grd2xyz.c		Make -S option work in GMT_COMPAT mode.
 
